fixed mobile device horizontal scroll

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -364,10 +364,20 @@
           align-self: center;
         }
       }
+      .articleImg {
+        &::before {
+          display: none;
+        }
+      }
     }
     .article2 {
       article {
         align-items: center;
+      }
+      .articleImg {
+        &::before {
+          display: none;
+        }
       }
     }
   }
