--- a/styles/style.css
+++ b/styles/style.css
@@ -992,10 +992,16 @@ footer {
     -ms-flex-item-align: center;
         align-self: center;
   }
+  .articles .article1 .articleImg::before {
+    display: none;
+  }
   .articles .article2 article {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .articles .article2 .articleImg::before {
+    display: none;
   }
 
   .moreLinks {
